[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "commentaire"
version = "0.0.1"
authors = [
  { name="Emery Berger", email="emery.berger@gmail.com" },
]
description = "An automatic commenter for Python code, with optional added translations."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/emeryberger/commentaire"
"Bug Tracker" = "https://github.com/emeryberger/commentaire"