[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-commentator"
version = "0.0.4"
authors = [
  { name="Emery Berger", email="emery.berger@gmail.com" },
]
description = "An automatic commenter for Python code."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
commentator = "commentator.__main__:main"

[project.urls]
"Homepage" = "https://github.com/emeryberger/commentator"
"Bug Tracker" = "https://github.com/emeryberger/commentator"