[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-commentator"
version = "0.2.5"
authors = [
  { name="Emery Berger", email="emery.berger@gmail.com" },
]
dependencies = ["openai>=0.27.0", "openai_async>=0.0.3", "rich>=12.4.4", "ast-comments>=1.0.0"]
description = "An automatic commenter for Python code."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
commentator = "commentator.__main__:main"


[project.urls]
"Homepage" = "https://github.com/emeryberger/commentator"
"Bug Tracker" = "https://github.com/emeryberger/commentator"